--- a/charts/mariadb-operator/templates/networkpolicy.yaml
+++ b/charts/mariadb-operator/templates/networkpolicy.yaml
@@ -13,3 +13,18 @@ spec:
     - ports:
       - protocol: TCP
         port: 9443
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-operator-to-db-egress
+spec:
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/instance: mariadb-operator
+  policyTypes:
+    - Egress
+  egress:
+    - ports:
+      - protocol: TCP
+        port: 3306
