--- a/charts/mariadb-instance/templates/networkpolicy.yaml
+++ b/charts/mariadb-instance/templates/networkpolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-operator-to-db
+  name: allow-operator-to-db-ingress
 spec:
   podSelector:
     matchLabels:
