--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,11 @@ on:
   pull_request:
     paths:
       - 'charts/**'
+  push:
+    branches:
+      - main
+    paths:
+      - 'charts/**'
 
 jobs:
   lint-chart:
