--- a/charts/vaultwarden/templates/networkpolicy.yaml
+++ b/charts/vaultwarden/templates/networkpolicy.yaml
@@ -21,4 +21,19 @@ spec:
       ports:
       - protocol: TCP
         port: 443
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-frontend-to-smtp
+spec:
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/component: vaultwarden
+  policyTypes:
+    - Egress
+  egress:
+    - ports:
+      - protocol: TCP
+        port: 25
 {{- end }}
